[gd_scene load_steps=11 format=3 uid="uid://biynbb14bcie3"]

[ext_resource type="Script" path="res://Script/title_scene.gd" id="1_ltpei"]
[ext_resource type="Texture2D" uid="uid://07sph45n3c7j" path="res://Textures/bg_music_live_stage.jpg" id="1_s6reb"]
[ext_resource type="Texture2D" uid="uid://dr3xwen7y608s" path="res://Textures/one_icon.png" id="2_v2ctv"]
[ext_resource type="Texture2D" uid="uid://078piq2flcoc" path="res://Textures/two_icon.png" id="3_wmt10"]
[ext_resource type="PackedScene" uid="uid://c4t7axgw7yadi" path="res://tscn/Other/option_menu.tscn" id="5_4h4wx"]
[ext_resource type="AudioStream" uid="uid://cn8ik1xr4toh6" path="res://Audio/AS_1119773_夜のネオン街。テクノ。.wav" id="5_ulvwn"]
[ext_resource type="AudioStream" uid="uid://68g3jequ5awq" path="res://Audio/AS_130310_決定／クリック／選択音（ピコンッ）.wav" id="7_1c0gq"]
[ext_resource type="Script" path="res://Script/PushSound.gd" id="7_nn3xm"]
[ext_resource type="Script" path="res://Script/MoveSound.gd" id="8_vct0r"]
[ext_resource type="AudioStream" uid="uid://cfkiotlh376l6" path="res://Audio/AS_18126_カーソルボタン（ソフトな電子音）.wav" id="9_xxkpi"]

[node name="TitleScene" type="Node"]
script = ExtResource("1_ltpei")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_s6reb")
expand_mode = 1

[node name="Title" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Command" type="RichTextLabel" parent="Control/Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -297.0
offset_right = 320.0
offset_bottom = 267.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 75
theme_override_font_sizes/normal_font_size = 300
bbcode_enabled = true
text = "[color=red]コ[color=blue]マ[color=green]ン[color=Yellow]ド"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Memory" type="Label" parent="Control/Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -297.5
offset_top = 300.0
offset_right = 297.5
offset_bottom = 573.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 75
theme_override_font_sizes/font_size = 300
text = "メモリー"

[node name="Menu" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -66.0
offset_right = 57.5
grow_horizontal = 2
grow_vertical = 0

[node name="Option" type="Button" parent="Control/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "オプションとか遊び方とか"

[node name="PlayerNumer" type="HBoxContainer" parent="Control/Menu"]
layout_mode = 2

[node name="OnePlayer" type="Button" parent="Control/Menu/PlayerNumer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "NPCと対戦"
icon = ExtResource("2_v2ctv")

[node name="TwoPlayer" type="Button" parent="Control/Menu/PlayerNumer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "2人で対戦"
icon = ExtResource("3_wmt10")

[node name="QuitButton" type="Button" parent="Control/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "ゲームを終了する"

[node name="OptionMenu" parent="Control" node_paths=PackedStringArray("menu", "title", "first_foucs_2") instance=ExtResource("5_4h4wx")]
visible = false
layout_mode = 1
menu = NodePath("../Menu")
title = NodePath("../Title")
first_foucs_2 = NodePath("../Menu/Option")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ulvwn")
volume_db = -20.0
autoplay = true
bus = &"BGM"

[node name="PushSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1c0gq")
bus = &"SE"
script = ExtResource("7_nn3xm")

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xxkpi")
volume_db = -10.0
bus = &"SE"
script = ExtResource("8_vct0r")

[connection signal="pressed" from="Control/Menu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Control/Menu/PlayerNumer/OnePlayer" to="." method="_on_one_player_pressed"]
[connection signal="pressed" from="Control/Menu/PlayerNumer/TwoPlayer" to="." method="_on_two_player_pressed"]
[connection signal="pressed" from="Control/Menu/QuitButton" to="." method="_on_quit_button_pressed"]
